# LowLevelEngine

./: BuildAll.bat  BuildAll.sh  CMakeLists.txt  README.md
Engine/: CMakeLists.txt
Engine/src/: EntryPoint.h  LLE_Interface.h  defines.h  game_types.h
Engine/src/core/Application/: application.c  application.h
Engine/src/core/Assert/: assertions.h
Engine/src/core/LLE_Memory/: lle_memory.c  lle_memory.h
Engine/src/core/Log/: log.c  log.h
Engine/src/core/Test/: test.c  test.h
Engine/src/platform/: platform.h  platform_linux.c  platform_win32.c
Sandbox/: CMakeLists.txt
Sandbox/src/: Entry.c  Game.c  Game.h  main.c
